# to-do-list

./: README.md  run.sh  stack.yaml  to-do-list.cabal
apps/advanced-to-do-list/: Main.hs
apps/advanced-to-do-list/static/: style.css
apps/basic-to-do-list/: Main.hs
apps/basic-to-do-list/static/: ghcjsiClient.html  style.css
