name:                to-do-list
version:             0.1
synopsis:            Basic and advanced ToDo list application
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable basic-to-do-list
  hs-source-dirs:      apps/basic-to-do-list/
  main-is:             Main.hs
  build-depends:
    base,
    containers,
    miso
  default-language:    Haskell2010
